parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function main_function
Rule 2     program -> main_function
Rule 3     main_function -> TYPE_INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE
Rule 4     statement_list -> statement
Rule 5     statement_list -> statement statement_list
Rule 6     statement -> expression_statement
Rule 7     statement -> control_statement
Rule 8     statement -> return_statement
Rule 9     statement -> print_statement
Rule 10    expression_statement -> expression SEMICOLON
Rule 11    control_statement -> if_statement
Rule 12    control_statement -> while_statement
Rule 13    control_statement -> do_while_statement
Rule 14    type_keyword -> TYPE_INT
Rule 15    type_keyword -> TYPE_BOOL
Rule 16    type_keyword -> TYPE_FLOAT
Rule 17    if_statement -> IF LPAREN expression RPAREN LBRACE statement RBRACE
Rule 18    if_statement -> IF LPAREN expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
Rule 19    if_statement -> IF LPAREN expression RPAREN LBRACE statement RBRACE ELIF LPAREN expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
Rule 20    while_statement -> WHILE LPAREN expression RPAREN LBRACE statement RBRACE
Rule 21    do_while_statement -> DO LBRACE statement RBRACE WHILE LPAREN expression RPAREN
Rule 22    return_statement -> RETURN LPAREN INTEGER RPAREN SEMICOLON
Rule 23    return_statement -> RETURN LPAREN FLOAT RPAREN SEMICOLON
Rule 24    return_statement -> RETURN LPAREN TRUE RPAREN SEMICOLON
Rule 25    return_statement -> RETURN LPAREN FALSE RPAREN SEMICOLON
Rule 26    print_statement -> PRINT LPAREN STRING RPAREN SEMICOLON
Rule 27    expression -> assignment_expression
Rule 28    expression -> logical_expression
Rule 29    expression -> unary_expression
Rule 30    expression -> arithmetic_expression
Rule 31    expression -> relational_expression
Rule 32    expression -> equality_expression
Rule 33    arithmetic_expression -> IDENTIFIER PLUS IDENTIFIER
Rule 34    arithmetic_expression -> IDENTIFIER PLUS INTEGER
Rule 35    arithmetic_expression -> IDENTIFIER MODULUS IDENTIFIER
Rule 36    arithmetic_expression -> IDENTIFIER MINUS IDENTIFIER
Rule 37    arithmetic_expression -> IDENTIFIER MINUS INTEGER
Rule 38    arithmetic_expression -> IDENTIFIER MINUS FLOAT
Rule 39    arithmetic_expression -> IDENTIFIER MODULUS INTEGER
Rule 40    arithmetic_expression -> IDENTIFIER MULTIPLY IDENTIFIER
Rule 41    arithmetic_expression -> IDENTIFIER MULTIPLY INTEGER
Rule 42    arithmetic_expression -> IDENTIFIER MULTIPLY FLOAT
Rule 43    arithmetic_expression -> IDENTIFIER DIVIDE IDENTIFIER
Rule 44    arithmetic_expression -> IDENTIFIER DIVIDE INTEGER
Rule 45    arithmetic_expression -> IDENTIFIER DIVIDE FLOAT
Rule 46    arithmetic_expression -> INTEGER PLUS INTEGER
Rule 47    arithmetic_expression -> INTEGER PLUS IDENTIFIER
Rule 48    arithmetic_expression -> INTEGER MODULUS IDENTIFIER
Rule 49    arithmetic_expression -> INTEGER MODULUS INTEGER
Rule 50    assignment_expression -> type_keyword IDENTIFIER ASSIGN INTEGER
Rule 51    assignment_expression -> type_keyword IDENTIFIER ASSIGN FLOAT
Rule 52    assignment_expression -> type_keyword IDENTIFIER ASSIGN TRUE
Rule 53    assignment_expression -> type_keyword IDENTIFIER ASSIGN FALSE
Rule 54    assignment_expression -> type_keyword IDENTIFIER ASSIGN arithmetic_expression
Rule 55    assignment_expression -> type_keyword IDENTIFIER ASSIGN function_call
Rule 56    assignment_expression -> IDENTIFIER ASSIGN INTEGER
Rule 57    assignment_expression -> IDENTIFIER ASSIGN FLOAT
Rule 58    assignment_expression -> IDENTIFIER ASSIGN TRUE
Rule 59    assignment_expression -> IDENTIFIER ASSIGN FALSE
Rule 60    assignment_expression -> IDENTIFIER ASSIGN arithmetic_expression
Rule 61    assignment_expression -> IDENTIFIER ASSIGN function_call
Rule 62    logical_expression -> logical_or_expression
Rule 63    logical_expression -> logical_and_expression
Rule 64    logical_expression -> logical_not_expression
Rule 65    logical_or_expression -> IDENTIFIER LOGICAL_OR IDENTIFIER
Rule 66    logical_or_expression -> IDENTIFIER LOGICAL_OR relational_expression
Rule 67    logical_or_expression -> IDENTIFIER LOGICAL_OR equality_expression
Rule 68    logical_or_expression -> relational_expression LOGICAL_OR IDENTIFIER
Rule 69    logical_or_expression -> relational_expression LOGICAL_OR relational_expression
Rule 70    logical_or_expression -> relational_expression LOGICAL_OR equality_expression
Rule 71    logical_or_expression -> equality_expression LOGICAL_OR IDENTIFIER
Rule 72    logical_or_expression -> equality_expression LOGICAL_OR relational_expression
Rule 73    logical_or_expression -> equality_expression LOGICAL_OR equality_expression
Rule 74    logical_and_expression -> IDENTIFIER LOGICAL_AND IDENTIFIER
Rule 75    logical_and_expression -> IDENTIFIER LOGICAL_AND relational_expression
Rule 76    logical_and_expression -> IDENTIFIER LOGICAL_AND equality_expression
Rule 77    logical_and_expression -> relational_expression LOGICAL_AND IDENTIFIER
Rule 78    logical_and_expression -> relational_expression LOGICAL_AND relational_expression
Rule 79    logical_and_expression -> relational_expression LOGICAL_AND equality_expression
Rule 80    logical_and_expression -> equality_expression LOGICAL_AND IDENTIFIER
Rule 81    logical_and_expression -> equality_expression LOGICAL_AND relational_expression
Rule 82    logical_and_expression -> equality_expression LOGICAL_AND equality_expression
Rule 83    logical_not_expression -> LOGICAL_NOT logical_and_expression
Rule 84    logical_not_expression -> LOGICAL_NOT logical_or_expression
Rule 85    logical_not_expression -> LOGICAL_NOT IDENTIFIER
Rule 86    logical_not_expression -> LOGICAL_NOT equality_expression
Rule 87    logical_not_expression -> LOGICAL_NOT relational_expression
Rule 88    equality_expression -> IDENTIFIER EQUALS IDENTIFIER
Rule 89    equality_expression -> IDENTIFIER EQUALS INTEGER
Rule 90    equality_expression -> IDENTIFIER EQUALS FLOAT
Rule 91    equality_expression -> IDENTIFIER EQUALS TRUE
Rule 92    equality_expression -> IDENTIFIER EQUALS FALSE
Rule 93    equality_expression -> IDENTIFIER NOT_EQUALS IDENTIFIER
Rule 94    equality_expression -> IDENTIFIER NOT_EQUALS INTEGER
Rule 95    equality_expression -> IDENTIFIER NOT_EQUALS FLOAT
Rule 96    equality_expression -> IDENTIFIER NOT_EQUALS TRUE
Rule 97    equality_expression -> IDENTIFIER NOT_EQUALS FALSE
Rule 98    relational_expression -> IDENTIFIER GREATER_THAN IDENTIFIER
Rule 99    relational_expression -> IDENTIFIER GREATER_THAN INTEGER
Rule 100   relational_expression -> IDENTIFIER GREATER_THAN FLOAT
Rule 101   relational_expression -> IDENTIFIER LESS_THAN IDENTIFIER
Rule 102   relational_expression -> IDENTIFIER LESS_THAN INTEGER
Rule 103   relational_expression -> IDENTIFIER LESS_THAN FLOAT
Rule 104   relational_expression -> IDENTIFIER LESS_THAN_OR_EQUAL IDENTIFIER
Rule 105   relational_expression -> IDENTIFIER LESS_THAN_OR_EQUAL INTEGER
Rule 106   relational_expression -> IDENTIFIER LESS_THAN_OR_EQUAL FLOAT
Rule 107   relational_expression -> IDENTIFIER GREATER_THAN_OR_EQUAL IDENTIFIER
Rule 108   relational_expression -> IDENTIFIER GREATER_THAN_OR_EQUAL INTEGER
Rule 109   relational_expression -> IDENTIFIER GREATER_THAN_OR_EQUAL FLOAT
Rule 110   relational_expression -> INTEGER GREATER_THAN IDENTIFIER
Rule 111   relational_expression -> INTEGER GREATER_THAN INTEGER
Rule 112   relational_expression -> INTEGER GREATER_THAN FLOAT
Rule 113   relational_expression -> INTEGER LESS_THAN IDENTIFIER
Rule 114   relational_expression -> INTEGER LESS_THAN INTEGER
Rule 115   relational_expression -> INTEGER LESS_THAN FLOAT
Rule 116   relational_expression -> INTEGER LESS_THAN_OR_EQUAL IDENTIFIER
Rule 117   relational_expression -> INTEGER LESS_THAN_OR_EQUAL INTEGER
Rule 118   relational_expression -> INTEGER LESS_THAN_OR_EQUAL FLOAT
Rule 119   relational_expression -> INTEGER GREATER_THAN_OR_EQUAL IDENTIFIER
Rule 120   relational_expression -> INTEGER GREATER_THAN_OR_EQUAL INTEGER
Rule 121   relational_expression -> INTEGER GREATER_THAN_OR_EQUAL FLOAT
Rule 122   relational_expression -> FLOAT GREATER_THAN IDENTIFIER
Rule 123   relational_expression -> FLOAT GREATER_THAN INTEGER
Rule 124   relational_expression -> FLOAT GREATER_THAN FLOAT
Rule 125   relational_expression -> FLOAT LESS_THAN IDENTIFIER
Rule 126   relational_expression -> FLOAT LESS_THAN INTEGER
Rule 127   relational_expression -> FLOAT LESS_THAN FLOAT
Rule 128   relational_expression -> FLOAT LESS_THAN_OR_EQUAL IDENTIFIER
Rule 129   relational_expression -> FLOAT LESS_THAN_OR_EQUAL INTEGER
Rule 130   relational_expression -> FLOAT LESS_THAN_OR_EQUAL FLOAT
Rule 131   relational_expression -> FLOAT GREATER_THAN_OR_EQUAL IDENTIFIER
Rule 132   relational_expression -> FLOAT GREATER_THAN_OR_EQUAL INTEGER
Rule 133   relational_expression -> FLOAT GREATER_THAN_OR_EQUAL FLOAT
Rule 134   unary_expression -> MINUS number
Rule 135   unary_expression -> PLUS number
Rule 136   unary_expression -> function_call
Rule 137   unary_expression -> IDENTIFIER
Rule 138   unary_expression -> LPAREN expression RPAREN
Rule 139   function -> type_keyword IDENTIFIER LPAREN argument_list RPAREN LBRACE statement_list RBRACE
Rule 140   function -> VOID IDENTIFIER LPAREN argument_list RPAREN LBRACE statement_list RBRACE
Rule 141   function_call -> IDENTIFIER LPAREN argument_list RPAREN
Rule 142   argument_list -> argument
Rule 143   argument_list -> argument COMMA argument_list
Rule 144   argument -> type_keyword IDENTIFIER
Rule 145   argument -> IDENTIFIER
Rule 146   number -> INTEGER
Rule 147   number -> FLOAT

Terminals, with rules where they appear

ASSIGN               : 50 51 52 53 54 55 56 57 58 59 60 61
COMMA                : 143
DIVIDE               : 43 44 45
DO                   : 21
ELIF                 : 19
ELSE                 : 18 19
EQUALS               : 88 89 90 91 92
FALSE                : 25 53 59 92 97
FLOAT                : 23 38 42 45 51 57 90 95 100 103 106 109 112 115 118 121 122 123 124 124 125 126 127 127 128 129 130 130 131 132 133 133 147
GREATER_THAN         : 98 99 100 110 111 112 122 123 124
GREATER_THAN_OR_EQUAL : 107 108 109 119 120 121 131 132 133
IDENTIFIER           : 33 33 34 35 35 36 36 37 38 39 40 40 41 42 43 43 44 45 47 48 50 51 52 53 54 55 56 57 58 59 60 61 65 65 66 67 68 71 74 74 75 76 77 80 85 88 88 89 90 91 92 93 93 94 95 96 97 98 98 99 100 101 101 102 103 104 104 105 106 107 107 108 109 110 113 116 119 122 125 128 131 137 139 140 141 144 145
IF                   : 17 18 19
INTEGER              : 22 34 37 39 41 44 46 46 47 48 49 49 50 56 89 94 99 102 105 108 110 111 111 112 113 114 114 115 116 117 117 118 119 120 120 121 123 126 129 132 146
LBRACE               : 3 17 18 18 19 19 19 20 21 139 140
LESS_THAN            : 101 102 103 113 114 115 125 126 127
LESS_THAN_OR_EQUAL   : 104 105 106 116 117 118 128 129 130
LOGICAL_AND          : 74 75 76 77 78 79 80 81 82
LOGICAL_NOT          : 83 84 85 86 87
LOGICAL_OR           : 65 66 67 68 69 70 71 72 73
LPAREN               : 3 17 18 19 19 20 21 22 23 24 25 26 138 139 140 141
MAIN                 : 3
MINUS                : 36 37 38 134
MODULUS              : 35 39 48 49
MULTIPLY             : 40 41 42
NOT_EQUALS           : 93 94 95 96 97
PLUS                 : 33 34 46 47 135
PRINT                : 26
RBRACE               : 3 17 18 18 19 19 19 20 21 139 140
RETURN               : 22 23 24 25
RPAREN               : 3 17 18 19 19 20 21 22 23 24 25 26 138 139 140 141
SEMICOLON            : 10 22 23 24 25 26
STRING               : 26
TRUE                 : 24 52 58 91 96
TYPE_BOOL            : 15
TYPE_FLOAT           : 16
TYPE_INT             : 3 14
VOID                 : 140
WHILE                : 20 21
error                : 

Nonterminals, with rules where they appear

argument             : 142 143
argument_list        : 139 140 141 143
arithmetic_expression : 30 54 60
assignment_expression : 27
control_statement    : 7
do_while_statement   : 13
equality_expression  : 32 67 70 71 72 73 73 76 79 80 81 82 82 86
expression           : 10 17 18 19 19 20 21 138
expression_statement : 6
function             : 1
function_call        : 55 61 136
if_statement         : 11
logical_and_expression : 63 83
logical_expression   : 28
logical_not_expression : 64
logical_or_expression : 62 84
main_function        : 1 2
number               : 134 135
print_statement      : 9
program              : 0
relational_expression : 31 66 68 69 69 70 72 75 77 78 78 79 81 87
return_statement     : 8
statement            : 4 5 17 18 18 19 19 19 20 21
statement_list       : 3 5 139 140
type_keyword         : 50 51 52 53 54 55 139 144
unary_expression     : 29
while_statement      : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function main_function
    (2) program -> . main_function
    (139) function -> . type_keyword IDENTIFIER LPAREN argument_list RPAREN LBRACE statement_list RBRACE
    (140) function -> . VOID IDENTIFIER LPAREN argument_list RPAREN LBRACE statement_list RBRACE
    (3) main_function -> . TYPE_INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE
    (14) type_keyword -> . TYPE_INT
    (15) type_keyword -> . TYPE_BOOL
    (16) type_keyword -> . TYPE_FLOAT

    VOID            shift and go to state 5
    TYPE_INT        shift and go to state 6
    TYPE_BOOL       shift and go to state 7
    TYPE_FLOAT      shift and go to state 8

    program                        shift and go to state 1
    function                       shift and go to state 2
    main_function                  shift and go to state 3
    type_keyword                   shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> function . main_function
    (3) main_function -> . TYPE_INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE

    TYPE_INT        shift and go to state 10

    main_function                  shift and go to state 9

state 3

    (2) program -> main_function .

    $end            reduce using rule 2 (program -> main_function .)


state 4

    (139) function -> type_keyword . IDENTIFIER LPAREN argument_list RPAREN LBRACE statement_list RBRACE

    IDENTIFIER      shift and go to state 11


state 5

    (140) function -> VOID . IDENTIFIER LPAREN argument_list RPAREN LBRACE statement_list RBRACE

    IDENTIFIER      shift and go to state 12


state 6

    (3) main_function -> TYPE_INT . MAIN LPAREN RPAREN LBRACE statement_list RBRACE
    (14) type_keyword -> TYPE_INT .

    MAIN            shift and go to state 13
    IDENTIFIER      reduce using rule 14 (type_keyword -> TYPE_INT .)


state 7

    (15) type_keyword -> TYPE_BOOL .

    IDENTIFIER      reduce using rule 15 (type_keyword -> TYPE_BOOL .)


state 8

    (16) type_keyword -> TYPE_FLOAT .

    IDENTIFIER      reduce using rule 16 (type_keyword -> TYPE_FLOAT .)


state 9

    (1) program -> function main_function .

    $end            reduce using rule 1 (program -> function main_function .)


state 10

    (3) main_function -> TYPE_INT . MAIN LPAREN RPAREN LBRACE statement_list RBRACE

    MAIN            shift and go to state 13


state 11

    (139) function -> type_keyword IDENTIFIER . LPAREN argument_list RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 14


state 12

    (140) function -> VOID IDENTIFIER . LPAREN argument_list RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 15


state 13

    (3) main_function -> TYPE_INT MAIN . LPAREN RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 16


state 14

    (139) function -> type_keyword IDENTIFIER LPAREN . argument_list RPAREN LBRACE statement_list RBRACE
    (142) argument_list -> . argument
    (143) argument_list -> . argument COMMA argument_list
    (144) argument -> . type_keyword IDENTIFIER
    (145) argument -> . IDENTIFIER
    (14) type_keyword -> . TYPE_INT
    (15) type_keyword -> . TYPE_BOOL
    (16) type_keyword -> . TYPE_FLOAT

    IDENTIFIER      shift and go to state 18
    TYPE_INT        shift and go to state 21
    TYPE_BOOL       shift and go to state 7
    TYPE_FLOAT      shift and go to state 8

    type_keyword                   shift and go to state 17
    argument_list                  shift and go to state 19
    argument                       shift and go to state 20

state 15

    (140) function -> VOID IDENTIFIER LPAREN . argument_list RPAREN LBRACE statement_list RBRACE
    (142) argument_list -> . argument
    (143) argument_list -> . argument COMMA argument_list
    (144) argument -> . type_keyword IDENTIFIER
    (145) argument -> . IDENTIFIER
    (14) type_keyword -> . TYPE_INT
    (15) type_keyword -> . TYPE_BOOL
    (16) type_keyword -> . TYPE_FLOAT

    IDENTIFIER      shift and go to state 18
    TYPE_INT        shift and go to state 21
    TYPE_BOOL       shift and go to state 7
    TYPE_FLOAT      shift and go to state 8

    argument_list                  shift and go to state 22
    argument                       shift and go to state 20
    type_keyword                   shift and go to state 17

state 16

    (3) main_function -> TYPE_INT MAIN LPAREN . RPAREN LBRACE statement_list RBRACE

    RPAREN          shift and go to state 23


state 17

    (144) argument -> type_keyword . IDENTIFIER

    IDENTIFIER      shift and go to state 24


state 18

    (145) argument -> IDENTIFIER .

    COMMA           reduce using rule 145 (argument -> IDENTIFIER .)
    RPAREN          reduce using rule 145 (argument -> IDENTIFIER .)


state 19

    (139) function -> type_keyword IDENTIFIER LPAREN argument_list . RPAREN LBRACE statement_list RBRACE

    RPAREN          shift and go to state 25


state 20

    (142) argument_list -> argument .
    (143) argument_list -> argument . COMMA argument_list

    RPAREN          reduce using rule 142 (argument_list -> argument .)
    COMMA           shift and go to state 26


state 21

    (14) type_keyword -> TYPE_INT .

    IDENTIFIER      reduce using rule 14 (type_keyword -> TYPE_INT .)


state 22

    (140) function -> VOID IDENTIFIER LPAREN argument_list . RPAREN LBRACE statement_list RBRACE

    RPAREN          shift and go to state 27


state 23
